test nav on mobile bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,9 @@ nav a:hover{
 }
 
 nav {
-
+  background-color: rgba(111, 119, 132, 0.8);
+  width: 100%;
+  z-index: 10;
 }
 
 ul{
@@ -73,15 +75,10 @@ ul{
 
 /* ---- MAIN ----*/
 #site-nav {
-  background-color: rgba(111, 119, 132, 0.8);
-  width: 100%;
-  z-index: 10;
   border: 5px solid gray;
   position: fixed;
 }
-#navbar-header{
-  width: 100%;
-}
+
 #brand-icon{
   width: 40px;
   height: 40px;
